syntax="proto2";
package sr;

enum DataStore {
  RUNNING = 1;
  CANDIDATE = 2;
  STARTUP = 3;
}

message Value {
  enum Types {
    LIST = 1;
    CONTAINER = 2;
    CONTAINER_PRESENCE = 3;
    LEAF_EMPTY = 4;

    BINARY = 10;
    BITS = 11;
    BOOL = 12;
    DECIMAL64 = 13;
    ENUM = 14;
    IDENTITYREF = 15;
    INSTANCEID = 16;
    INT8 = 17;
    INT16 = 18;
    INT32 = 19;
    INT64 = 20;
    LEAFREF = 21;
    STRING = 22;
    UINT8 = 23;
    UINT16 = 24;
    UINT32 = 25;
    UINT64 = 26;
  }

  required string path = 1;
  required Types type = 2;
  
  optional uint32 length = 3;

  optional string binary_val = 10;
  optional string bits_val = 11;
  optional bool bool_val = 12;
  optional uint64 decimal64_val = 13;
  optional string enum_val = 14;
  optional string identityref_val = 15;
  optional string instanceid_val = 16;
  optional int32 int8_val = 17;
  optional int32 int16_val = 18;
  optional int32 int32_val = 19;
  optional int64 int64_val = 20;
  optional string leafref_val = 21;
  optional string string_val = 22;
  optional uint32 uint8_val = 23;
  optional uint32 uint16_val = 24;
  optional uint32 uint32_val = 25;
  optional uint64 uint64_val = 26;
}

message SessionStartReq {
  required string user_name = 1;
  required DataStore datastore = 2;
}

message SessionStartResp {
  required uint32 session_id = 1;
}

message SessionStopReq {
  required uint32 session_id = 1;
}

message SessionStopResp {
  required uint32 session_id = 1;
}

message GetItemReq {
  required string path = 1;
}

message GetItemResp {
  optional Value value = 1;
}

message GetItemsReq {
  required string path = 1;

  optional bool recursive = 2;
  optional uint32 limit = 3;
  optional uint32 offset = 4;
}

message GetItemsResp {
  repeated Value value = 1;
}

enum Operation {
  SESSION_START = 1;
  SESSION_STOP = 2;

  GET_ITEM = 3;
  GET_ITEMS = 4;
}

message Req {
  required Operation operation = 1;

  optional SessionStartReq session_start_req = 10;
  optional SessionStopReq session_stop_req = 11;
  
  optional GetItemReq get_item_req = 12;
  optional GetItemsReq get_items_req = 13;
}

message Resp {
  required Operation operation = 1;
  required uint32 result = 2;
  optional string error_msg = 3;

  optional SessionStartResp session_start_resp = 10;
  optional SessionStopResp session_stop_resp = 11;
  
  optional GetItemResp get_item_resp = 12;
  optional GetItemsResp get_items_resp = 13;
}

message Msg {
  enum MsgType {
    REQUEST = 1;
    RESPONSE = 2;
  }

  required MsgType type = 1;
  required uint32 session_id = 2;
  optional Req request = 3;
  optional Resp response = 4;
}
